# ContactIPM

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: README.md  _compare_terminal.py  _crosscheck.py  _inspect_json.py  acados_chain_mass.py  acados_pendulum.py  acados_quadrotor.py  compare_trajectories.py  diagnose_pendulum.py  run_all.py  setup.sh  trajectory_dump.py
benchmarks/fatrop_benchmarks/: generate_c_code.py
benchmarks/fatrop_codegen/cart_pendulum_mpc/: cart_pendulum_mpc.c  problem_meta.h
benchmarks/fatrop_codegen/cart_pendulum_time/: cart_pendulum_time.c  problem_meta.h
benchmarks/fatrop_codegen/hanging_chain_2d/: hanging_chain_2d.c  problem_meta.h
benchmarks/fatrop_codegen/hanging_chain_3d/: hanging_chain_3d.c  problem_meta.h
benchmarks/fatrop_codegen/quadcopter_mpc/: problem_meta.h  quadcopter_mpc.c
benchmarks/fatrop_codegen/quadcopter_one_obs/: problem_meta.h  quadcopter_one_obs.c
benchmarks/fatrop_codegen/quadcopter_p2p/: problem_meta.h  quadcopter_p2p.c
benchmarks/fatrop_codegen/quadcopter_three_obs/: problem_meta.h  quadcopter_three_obs.c
benchmarks/fatrop_codegen/truck_trailer_time/: problem_meta.h  truck_trailer_time.c
benchmarks/fatrop_contactipm/: bench_cart_pendulum_mpc.cpp  bench_cart_pendulum_time.cpp  bench_hanging_chain_2d.cpp  bench_hanging_chain_3d.cpp  bench_quadcopter_mpc.cpp  bench_quadcopter_one_obs.cpp  bench_quadcopter_p2p.cpp  bench_quadcopter_three_obs.cpp  bench_truck_trailer_time.cpp  cart_pendulum_mpc.cpp  codegen_driver.hpp  diag_cart_pendulum_mpc.cpp  diag_conditioning.cpp  diag_hanging_chain_2d.cpp  diag_no_constraints.cpp  diag_quad_mpc.cpp  diag_verbose.cpp  fatrop_benchmark_common.hpp  test_codegen_p2p.cpp  test_solver_p2p.cpp  verify_codegen.cpp
docs/: OCS2_CONTACT_AND_SWITCHED_TIMES.md  SWITCHED_SYSTEM_JUMP_MAP_COMPOSITION.md  hybrid_ipm_rti_plan.md
examples/: centroidal_trot_nmpc.cpp  chain_mass_nmpc.cpp  pendulum_nmpc_paper.cpp  quadrotor_2d_nmpc.cpp  test_lqr_invariance.cpp  test_riccati_invariance.cpp  test_scaling_invariance.cpp  trajectory_dump.hpp
include/nmpc/: nmpc_barrier_manager.hpp  nmpc_core.hpp  nmpc_filter_ls.hpp  nmpc_hessian_approx.hpp  nmpc_ipm_paper.hpp  nmpc_kkt_diag.hpp  nmpc_preconditioner.hpp  nmpc_problem.hpp  nmpc_riccati.hpp  nmpc_solver_paper.hpp
tests/: test_barrier_manager.cpp  test_filter_ls.cpp  test_globalization.cpp  test_hessian_approx.cpp  test_kkt_diag.cpp  test_precond_invariance.cpp  test_preconditioner.cpp  test_riccati.cpp
